[TSK-96] add lombok, ResponseStatus for exceptions and Builder for models, also change DTOs to records and explicit type to var