@@ -3,17 +3,17 @@ package com.example.trello.service.impl;
 import com.example.trello.mapper.CardMapper;
 import com.example.trello.model.dto.card.Card;
 import com.example.trello.model.dto.card.CardModification;
-import com.example.trello.model.entity.board.BoardEntity;
 import com.example.trello.model.entity.card.CardEntity;
 import com.example.trello.repository.CardRepository;
 import com.example.trello.service.BoardService;
 import com.example.trello.service.CardService;
 import com.example.trello.service.exception.CardException;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class CardServiceImpl implements CardService {
 
     private final CardRepository cardRepository;
@@ -22,20 +22,14 @@ public class CardServiceImpl implements CardService {
 
     private final CardMapper cardMapper;
 
-    public CardServiceImpl(final CardRepository cardRepository, final BoardService boardService, final CardMapper cardMapper) {
-        this.cardRepository = cardRepository;
-        this.boardService = boardService;
-        this.cardMapper = cardMapper;
-    }
-
     public Card getCardById(final Long cardId) {
         return cardMapper.map(getCardEntityById(cardId));
     }
 
     public Card updateCard(final Long cardId, final CardModification cardModification) {
-        CardEntity cardEntity = getCardEntityById(cardId);
-        cardEntity.setName(cardModification.getName());
-        cardEntity.setDescription(cardModification.getDescription());
+        var cardEntity = getCardEntityById(cardId);
+        cardEntity.setName(cardModification.name());
+        cardEntity.setDescription(cardModification.description());
         cardEntity = cardRepository.save(cardEntity);
         return cardMapper.map(cardEntity);
     }
@@ -48,12 +42,12 @@ public class CardServiceImpl implements CardService {
         return cardRepository.findAllByBoardEntityIdOrderByCreatedAtDesc(boardId)
                 .stream()
                 .map(cardMapper::map)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Card addCard(final Long boardId, final CardModification cardModification) {
-        final BoardEntity boardEntity = boardService.getBoardById(boardId);
-        CardEntity cardEntity = cardMapper.map(cardModification);
+        final var boardEntity = boardService.getBoardById(boardId);
+        var cardEntity = cardMapper.map(cardModification);
         cardEntity.setBoardEntity(boardEntity);
         cardEntity = cardRepository.save(cardEntity);
         return cardMapper.map(cardEntity);
